--- a/res/layout/itemdetail.xml
+++ b/res/layout/itemdetail.xml
@@ -2,38 +2,56 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
-    
+    android:orientation="vertical" >
+    <TextView
+		android:id="@+id/textView_Title"
+		android:textColor="@color/text_color"
+		android:textSize="28dp"
+		android:background="@color/detail_titlebg"
+		android:gravity="center"
+		android:paddingTop="10dp"
+		android:paddingBottom="10dp"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"/>
 	<LinearLayout 
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
+		android:layout_below="@id/textView_Title"
 	    android:orientation="vertical"
-	    android:layout_marginTop="50dp"
 	    android:layout_gravity="center_vertical" >
 	    <TextView 
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 		    android:textSize="20sp"
 		    android:layout_margin="10dp"
+			android:textColor="@color/text_color"
 	        android:text="@string/Username" />
 	    <TextView 
 	        android:id="@+id/tvDetailUsername"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
+			android:textColor="@color/text_color"
 		    android:layout_margin="10dp"
-	        android:textSize="28sp" />
-	    <TextView 
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-		    android:textSize="20sp"
-		    android:layout_margin="10dp"
-	        android:text="@string/Password" />
+
+	        android:textSize="24sp" />
+
+		<TextView
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginLeft="10dp"
+			android:layout_marginRight="10dp"
+			android:layout_marginTop="50dp"
+			android:layout_marginBottom="10dp"
+			android:text="@string/Password"
+			android:textColor="@color/text_color"
+			android:textSize="20sp"/>
 	    <TextView 
 	        android:id="@+id/tvDetailPassword"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
+			android:textColor="@color/text_color"
 		    android:layout_margin="10dp"
-	        android:textSize="28sp" />
+	        android:textSize="24sp" />
 	</LinearLayout>
 	<LinearLayout 
 	    android:layout_width="match_parent"
@@ -48,7 +66,8 @@
 			android:textSize="20sp"
 		    android:padding="10dp"
 		    android:layout_margin="10dp"
-		    android:text="@string/Edit"	/>
+		    android:text="@string/Edit"
+			android:background="@color/button_lightgray" />
 	    <Button 
 	        android:id="@+id/btnDetailDelete"
 	        android:layout_width="0dp"
@@ -57,6 +76,7 @@
 			android:textSize="20sp"
 		    android:padding="10dp"
 		    android:layout_margin="10dp"
-	        android:text="@string/Delete"	/>
+	        android:text="@string/Delete"
+			android:background="@color/button_lightgray"/>
 	</LinearLayout>
 </RelativeLayout>
