--- a/res/layout/set_password.xml
+++ b/res/layout/set_password.xml
@@ -11,6 +11,7 @@
 	    <TextView 
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
+			android:textColor="@color/text_color"
 	        android:text="@string/InputPasswordHint"/>
 	
 	    <EditText 
@@ -20,27 +21,48 @@
 	        android:singleLine="true"
 	        android:padding="10dp"
 	        android:background="@color/textview_bgcolor"
+			android:textColor="@color/text_color"
 	        android:inputType="textPassword" />
 	    
 	    <TextView 
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
+			android:textColor="@color/text_color"
 	        android:text="@string/InputPasswordHint2"/>
-	
-	    <EditText 
-	        android:id="@+id/edtPassword2"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:singleLine="true"
-	        android:padding="10dp"
-	        android:background="@color/textview_bgcolor"
-	        android:inputType="textPassword" />
-	    
+
+		<RelativeLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:gravity="center_vertical"
+			android:orientation="horizontal">
+			<EditText
+				android:id="@+id/edtPassword2"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_toLeftOf="@id/imgViewPassMatch"
+				android:layout_alignParentLeft="true"
+				android:singleLine="true"
+				android:padding="10dp"
+				android:background="@color/textview_bgcolor"
+				android:textColor="@color/text_color"
+				android:inputType="textPassword" />
+			<ImageView
+				android:id="@+id/imgViewPassMatch"
+				android:visibility="invisible"
+				android:layout_alignParentRight="true"
+				android:layout_centerVertical="true"
+				android:background="@android:color/white"
+				android:src="@drawable/passmatch"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"/>
+		</RelativeLayout>
+
 	    <Button
 	        android:id="@+id/btnSubmit"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        android:padding="10dp"
-	        android:text="@string/Confirm"	/>
+	        android:text="@string/Confirm"
+			android:background="@color/button_lightgray"/>
     </LinearLayout>
 </LinearLayout>
