--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="background_gray">#7D7D7D</color>
-    
-    
-    <color name="button_lightgray">#797979</color>
+    <color name="background_gray">#898989</color>
+    <color name="button_lightgray">#55797979</color>
     <color name="button_darkergray">#797979</color>
     <color name="button_clickyellow">#DDC413</color>
     <color name="divider_lightgray">#C9C9C9</color>
-    <color name="text_color">#000000</color>
+    <color name="text_color">#FF000000</color>
     <color name="textview_bgcolor">#55cccccc</color>
-    
+    <color name="listview_bgcolor">#33454545</color>
+    <color name="detail_titlebg">#55000000</color>
+    <color name="window_background_color">#EFE4B0</color>
 </resources>
