--- a/res/drawable/button_bgcolor_selector.xml
+++ b/res/drawable/button_bgcolor_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector  xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:drawable="@color/button_clickyellow" android:state_pressed="true" />
+    <item android:drawable="@color/button_darkergray" android:state_pressed="true" />
     <item android:drawable="@color/button_lightgray" android:state_pressed="false" />
 </selector>
