--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -6,7 +6,13 @@
 	
 	</style>
 	<style name="AppTheme" parent="android:Theme.NoTitleBar">
-		<!-- <item name="android:windowBackground">@drawable/background_img</item>  -->
-		<item name="android:background">@color/window_background_color</item>
+		<item name="android:windowBackground">@drawable/background_img</item>
+		<!-- <item name="android:background">@color/window_background_color</item> -->
+	</style>
+	<style name="button_style">
+		<item name="android:background">@drawable/button_bgcolor_selector</item>
+		<item name="android:paddingTop">5dp</item>
+		<item name="android:paddingBottom">5dp</item>
+		<item name="android:textSize">24sp</item>
 	</style>
 </resources>
